# paper-context

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.db  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: quality.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase2_retrieval_schema.py  0003_document_revisions.py  0004_documents_pagination_search_indexes.py  0005_phase4_observability.py  0006_phase5_retrieval_table_embeddings.py
docs/: README.md  apis-and-tools.md  architecture.md  data-model.md  evaluation-and-roadmap.md  ingestion-and-indexing.md  issue-1-resolution-plan.md  retrieval.md  test-strategy.md
src/paper_context/: cli.py  logging.py  observability.py  pagination.py
src/paper_context/api/: app.py
src/paper_context/api/routes/: __init__.py  documents.py  health.py
src/paper_context/config/: settings.py
src/paper_context/db/: __init__.py  engine.py  session.py
src/paper_context/ingestion/: __init__.py  api.py  enrichment.py  identifiers.py  parser_isolation.py  parser_worker.py  parsers.py  queue.py  service.py  types.py
src/paper_context/mcp/: __init__.py  server.py
src/paper_context/models/: __init__.py  base.py  documents.py  ingestion.py  retrieval.py
src/paper_context/queue/: __init__.py  contracts.py  pgmq.py
src/paper_context/retrieval/: __init__.py  clients.py  service.py  types.py
src/paper_context/schemas/: api.py  common.py  mcp.py  public.py
src/paper_context/storage/: __init__.py  base.py  local_fs.py
src/paper_context/worker/: __init__.py  loop.py  runner.py
tests/: conftest.py  test_api_and_health.py  test_cli_runner.py  test_config_db_storage.py  test_deployment_config.py  test_mcp_and_misc.py  test_pgmq_adapter.py  test_queue.py  test_queue_ingestion.py  test_worker.py
tests/contract/: test_api_contracts.py  test_documents_api_contracts.py  test_mcp_contracts.py
tests/contract/golden/: document-detail.json  document-outline.json  document-tables.json  documents-list.json  documents-replace.json  documents-upload.json  healthz.json  ingest-job-failed.json  ingest-job-ready.json  mcp-build-context-pack.json  mcp-get-document-outline.json  mcp-get-passage-context.json  mcp-get-table.json  mcp-search-documents.json  mcp-search-passages.json  mcp-search-tables.json  readyz-degraded.json  readyz-ready.json
tests/integration/: test_ingestion_flow.py  test_ingestion_hardening.py  test_mcp_server_integration.py  test_migrations.py  test_pgmq_postgres.py  test_retrieval_service_integration.py
tests/regression/: test_deployment_config.py  test_staging_smoke.py  test_user_journeys.py
tests/slice/: test_api_and_health.py  test_documents_api.py  test_mcp_app.py
tests/unit/: test_cli_runner.py  test_config_db_storage.py  test_documents_api_edges.py  test_documents_api_service_edges.py  test_documents_api_service_more_coverage.py  test_infra_coverage.py  test_ingestion_identifiers.py  test_ingestion_parsers.py  test_ingestion_service_helpers.py  test_mcp_misc.py  test_observability.py  test_pagination_and_documents_route_edge_cases.py  test_parser_isolation_edge_cases.py  test_pgmq_adapter.py  test_phase1_ingestion.py  test_queue.py  test_queue_ingestion.py  test_retrieval_clients.py  test_retrieval_service.py  test_retrieval_service_helpers_extra.py  test_retrieval_service_phase3.py  test_worker.py
