[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "paper-context"
version = "0.1.0"
description = "Phase 0 runtime skeleton for the Paper Context MVP."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
	"alembic>=1.16,<2.0",
	"docling>=2.80.0",
	"fastapi>=0.115,<1.0",
	"fastmcp>=3.1.1",
	"orjson>=3.10,<4.0",
	"pdfplumber>=0.11.9",
	"psycopg[binary]>=3.2,<4.0",
	"pydantic-settings>=2.7,<3.0",
	"python-multipart>=0.0.20,<1.0",
	"sqlalchemy>=2.0,<3.0",
	"uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
	"bandit[toml]>=1.9.4,<2.0",
	"httpx>=0.28,<1.0",
	"pre-commit>=4.5.1,<5.0",
	"pyright>=1.1.403,<2.0",
	"pytest>=9.0.2,<10.0",
	"pytest-cov>=7.0.0,<8.0.0",
	"pytest-xdist>=3.8.0,<4.0.0",
	"ruff>=0.11,<1.0",
]

[project.scripts]
paper-context = "paper_context.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_context"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]
markers = [
	"unit: fast isolated logic and module-level tests.",
	"slice: in-process FastAPI and service-slice tests.",
	"integration: multi-component tests against real infrastructure seams.",
	"contract: schema and golden-response compatibility checks.",
	"regression: deployment-shape and smoke/regression checks.",
	"migration: schema migration smoke coverage.",
	"slow: comparatively expensive tests.",
	"requires_postgres: requires a real Postgres/PGMQ database.",
	"staging_only: intended for the non-production staging environment only.",
]

[tool.coverage.run]
branch = true
data_file = ".pytest_cache/.coverage"
source = ["paper_context"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.bandit]
exclude_dirs = ["tests"]
